<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp">

    <!-- 일자, 여행 일정 title -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_triptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_frdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frdt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ~ "
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_todt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todt"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>