<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_googleLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_kakaoLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">
    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/btn_kakaoLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#AB5CB2F6"
        android:text="@string/kakao"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_googleLogin"/>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kakaoLogin"
        app:layout_constraintVertical_bias="0.504"
        tools:layout_editor_absoluteX="112dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_nosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nosignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_kakaoLogin"
        app:layout_constraintVertical_bias="0.504"
        tools:layout_editor_absoluteX="219dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>